增加單選、多選

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -7,4 +7,6 @@
     <string name="StrShowbmi">"你的BMI : "</string>
     <string name="strGoNext">下一頁</string>
     <string name="goBack">返回</string>
+    <string name="strMale">男生</string>
+    <string name="strFemale">女生</string>
 </resources>
